--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,7 +14,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
-    "mongodb": "^5.7.0",
-    "nodemon": "^3.0.1"
+    "mongodb": "^5.7.0"
   }
 }
